# RL-in-Robotics

./: .gitignore  .python-version  README.md  _config.yml  agent.py  compare_safety.py  config.py  continue_training.py  demo_cac.py  deploy_stage1.py  deploy_stage1_agent.py  deploy_stage2.py  device_config.py  dual_model_visualization.py  environment.py  eval_cac.py  eval_stage1.py  eval_stage2.py  experiments.py  goal_reaching_test.py  gridworld_q_network.pth  main.py  main_backup.py  manual_drive.py  model_visualization.py  network.py  presentation.html  presentation.md  pyproject.toml  realistic_car_env.py  replay_buffer.py  report.aux  report.tex  requirements.txt  rl_env.py  rl_main.py  rollout_2d.py  rollout_2d_improved.py  rollout_2d_viz.py  rollout_isaac.py  (+21 more)
Report/: Team-01-Midterm_report.aux  Team-01-Midterm_report.tex  Team01-Report.tex  report.aux  report.tex
cac/: algorithms.py  cbf_clf.py  nets.py  replay.py
checkpoints/: responsive_stage1.pt  responsive_stage2.pt  stage1_safe_policy.pt  stage2_final_policy.pt
envs/: planar_nav.py
isaac/: isaac_env.py
modularcar_env/: __init__.py  config.py  env.py  models.py  obstacles.py  sensors.py  state.py
runs/: demo_s1_last.pt  demo_s2_last.pt  goal_from_safety_1760158229_last.pt  safety_balanced_1760155979_last.pt  safety_improved_1760155738_last.pt
stage1/: __init__.py  agent.py  cbf.py  checkpoints.py  config.py  env_setup.py  eval.py  networks.py  training.py  viz.py  wrappers.py
stage2/: __init__.py  agent.py  checkpoints.py  eval.py  goal_clf.py  replay.py  training.py
(+2 files in other folders)
