[project]
name = "rl-in-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24",
    "tensorboard>=2.16",
    "torch>=2.2",
    "tqdm>=4.66",
]
